# kpi-SE

./: CMakeLists.txt
Linux/: bitmap_graphic
src/: main.cpp  typeof.hpp
src/Canvas/: Canvas.cpp  Canvas.hpp
src/Entity/: Entity.cpp  Entity.hpp
src/EventHandler/: EventHandler.cpp  EventHandler.hpp  Events.cpp  Events.hpp
src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/Object/: Object.cpp  Object.hpp
src/Pen/: Pen.cpp  Pen.hpp
src/Rectangle/: Rectangle.cpp  Rectangle.hpp
src/Shapes/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Shapes.hpp
src/Window/: Window.cpp  Window.hpp
src/WindowInteraction/: Button.cpp  Button.hpp  ButtonEvents.cpp  ButtonEvents.hpp  Mouse.cpp  Mouse.hpp
tests/: test_main.cpp
